fix cospro bug list

--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -133,7 +133,7 @@
     <div class="containers">
       <h4 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h4>
       <div class="grid-card-containers">
-        <a class="card">
+        <a class="card" href="#cospro-feature">
           <div class="card-head">お悩み①</div>
           <h2 class="ttl-head">出張手配は社員任せ。<br> 金額の妥当性が判断できない</h2>
           <img src="/assets/img/cospro/card4.png" alt="work image" class="card-img">
@@ -144,7 +144,7 @@
           <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
 
-        <a class="card">
+        <a class="card" href="#membership">
           <div class="card-head">お悩み②</div>
           <h2 class="ttl-head">出張手配に時間がかかり <br>「見えないコスト」が上昇</h2>
           <img src="/assets/img/cospro/card5.png" alt="work image" class="card-img">
@@ -155,7 +155,7 @@
           <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
 
-        <a class="card">
+        <a class="card"  href="#flow-usage">
           <div class="card-head">お悩み３</div>
           <h2 class="ttl-head">出張手配のルールがない。<br> ガバナンスが不安・・・</h2>
           <img src="/assets/img/cospro/card6.png" alt="work image" class="card-img">
@@ -179,10 +179,6 @@
       </div>
       
       <div class="act-more-content">
-        <div class="act-more-content-img">
-          <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
-          <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
-        </div>
         <div class="act-more-content-btn">
           <a href="#" class="blue_gradient_btn">
             お申し込みはこちら
@@ -223,7 +219,7 @@
         <div class="ttl-secondary">規程に準拠して、<div class="text-underline"> 自動でチェック＆差し戻し !</div></div>
 
         <div class="grid-card-containers">
-          <a class="card">
+          <div class="card">
             <div class="card-head">
               <img src="/assets/img/cospro/card7.png" alt="work image" class="card-img">
 
@@ -235,9 +231,9 @@
             <div class="card-description">
               社員様の手配内容は、データ管理システムからダウンロードすることができるので、経理データとしてご活用いただけます。もちろん、<span class="font-bold">予約システム・データ管理システムも無償</span>でご利用いただけます。
             </div>
-          </a>
+          </div>
 
-          <a class="card">
+          <div class="card">
             <div class="card-head">
               <img src="/assets/img/cospro/card8.png" alt="work image" class="card-img">
 
@@ -249,7 +245,7 @@
             <div class="card-description">
               コールセンターは年中無休!出張の移動中やちょっとした <span class="font-bold">空き時間に、数分で出張の予約や変更が行えます。</span>  社員様一人ひとりに出張手配における秘書がいる感覚でご利用いただけます。
             </div>
-          </a>
+          </div>
 
           <div></div>
 
@@ -272,20 +268,20 @@
         </div>
 
         <div class="grid-card-containers">
-          <a class="card">
+          <div class="card">
             <div class="card-head type-2">
               <div class="card-title">
                 不正の抑止力が働き、出張費の削減に
               </div>
             </div>
-          </a>
-          <a class="card">
+          </div>
+          <div class="card">
             <div class="card-head type-2">
               <div class="card-title">
                 災害など緊急時に素早く安否が確認できる
               </div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
 
@@ -332,13 +328,13 @@
       <ul class="flow-container">
         <li class="flow-item">
           <div class="flow-item-detail">
-            <div class="ttl-head">お問合せ</div>
+            <div class="ttl-head">お問い合わせ</div>
             <div class="flow-image">
               <img src="/assets/img/cospro/step1.png" alt="work image" class="card-img">
             </div>
             <p class="flow-content">まずはお気軽にご相談ください</p>
             <div class="bondi_blue_outline_btn">
-              <a class="bondi_blue_outline_btn__tittle">サービス一覧を見る</a>
+              <a class="bondi_blue_outline_btn__tittle">ご相談・お問い合わせ</a>
             </div>
           </div>
         </li>
@@ -373,7 +369,7 @@
 
       <div class="btn-sp-only">
         <a class="bondi_blue_outline_btn">
-          <span class="bondi_blue_outline_btn__tittle">サービス一覧を見る</>
+          <span class="bondi_blue_outline_btn__tittle">サービス一覧を見る</span>
         </a>
       </div>
     </div>
