--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -125,7 +125,7 @@ link: "#material"
         <div class="containers">
           <ul class="inherit card-list">
             <li class="card-type6">
-              <a href="#challenge-tax-returns" class="card">
+              <a href="#feature1" class="card">
                 <h5 class="ttl-category">全国を網羅した豊富な</h5>
                 <h3 class="ttl-info">特別優待メニュー</h3>
                 <div class="card-image">
@@ -141,7 +141,7 @@ link: "#material"
               </a>
             </li>
             <li class="card-type6">
-              <a href="#challenge-improve-cash" class="card">
+              <a href="#feature2" class="card">
                 <h5 class="ttl-category">完全アウトソーシングで</h5>
                 <h3 class="ttl-info">手間いらず</h3>
                 <div class="card-image">
@@ -157,7 +157,7 @@ link: "#material"
               </a>
             </li>
             <li class="card-type6">
-              <a href="#challenge-raise-funds" class="card">
+              <a href="#feature3" class="card">
                 <h5 class="ttl-category">初めてでも導入しやすい</h5>
                 <h3 class="ttl-info">料金プラン</h3>
                 <div class="card-image">
@@ -201,7 +201,7 @@ link: "#material"
           </div>
           <div class="saison-introduce">
             <div class="saison-introduce-video">
-              <iframe src="https://www.youtube.com/embed/6tmhg_QFPcg"></iframe>
+              <img src="/assets/img/saison_welfare/dummy.png" alt="dummy">
             </div>
             <div class="saison-introduce-description">
               <h5 class="ttl-quinary bold">【サービス紹介動画（43秒）】</h5>
@@ -222,10 +222,6 @@ link: "#material"
           <h4 class="act-more-tooltip__content">{{"セゾンフクリコの優待サービスやメリットがわかる！" | safe}}</h4>
         </div>
         <div class="act-more-content">
-          <div class="act-more-content-img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
-            <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
-          </div>
           <div class="act-more-content-btn">
             <a href="#" class="blue_gradient_btn small">
               サービス資料ダウンロード
@@ -241,7 +237,7 @@ link: "#material"
     <h1 class="ttl-primary">従業員はもちろん、会社にもうれしい福利厚生サービスです。</h1>
     <div class="container">
       <ul class="saison-feature-list">
-        <li class="card-type25">
+        <li id="feature1" class="card-type25">
           <div class="card-heading">
             <span class="card-index">特長①</span>
             <h3 class="card-issue-title">全国を網羅した豊富な特別優待メニューを簡略化！</h3>
@@ -289,34 +285,34 @@ link: "#material"
             <div class="preferential-service-title">優待サービス一例</div>
             <ul class="preferential-service-content">
               <li>
-                <a href="#">
+                <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_1.png" alt="preferential service 1">
                   <div class="preferential-service-description">
                     <div class="title">映画鑑賞で</div>
                     <div class="muted">通常鑑賞チケット 2,000円 → <span class="special">1,000円〜に！</span></div>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_2.png" alt="preferential service 2">
                   <div class="preferential-service-description">
                     <div class="title">食事で</div>
                     <div class="muted">すかいらーくグループご優待券 通常10,000円 → <span class="special">9,000円に！</span></div>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_3.png" alt="preferential service 3">
                   <div class="preferential-service-description">
                     <div class="title">健康相談・メンタル相談で</div>
                     <div class="special"> 相談料　無料</div>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_4.png" alt="preferential service 4">
                   <div class="preferential-service-description">
                     <div class="title">カラオケで</div>
@@ -326,28 +322,28 @@ link: "#material"
                 </a>
               </li>
               <li>
-                <a href="#">
+                <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_5.png" alt="preferential service 5">
                   <div class="preferential-service-description">
                     <div class="title">引越しで</div>
                     <div class="muted"> サカイ引越センター 引越基本料金 <span class="special">20%OFF</span></div>
                   </div>
-                </a>
+                </div>
               </li>
               <li>
-                <a href="#">
+                <div class="card">
                   <img src="/assets/img/saison_welfare/preferential_service_6.png" alt="preferential service 6">
                   <div class="preferential-service-description">
                     <div class="title">eラーニングで</div>
                     <div class="muted">通常室料</div>
                     <div class="special"> →約800講座の受講が無料</div>
                   </div>
-                </a>
+                </div>
               </li>
             </ul>
           </div>
         </li>
-        <li class="card-type25">
+        <li id="feature2" class="card-type25">
           <div class="card-heading">
             <span class="card-index">特長②</span>
             <h3 class="card-issue-title">完全アウトソーシングで、手間いらず</h3>
@@ -359,7 +355,7 @@ link: "#material"
             <li>導入事業者様に業務をご負担いただく必要はございません。</li>
           </ul>
         </li>
-        <li class="card-type25">
+        <li id="feature3" class="card-type25">
           <div class="card-heading">
             <span class="card-index">特長③</span>
             <h3 class="card-issue-title">初めてでも導入しやすい料金プラン</h3>
@@ -597,7 +593,7 @@ link: "#material"
   <section class="section-contact fadein">
     <div class="card-type22">
       <div class="ttl-notice">CONTACT</div>
-      <h3 class="ttl-tertiary">支払い.comをご検討中の方へ</h3>
+      <h3 class="ttl-tertiary">セゾンインボイスをご検討中の方へ</h3>
       <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
@@ -606,32 +602,32 @@ link: "#material"
                 <div class="card__box--ttl">サービス内容について詳しく知りたい方はこちら</div>
                 <div class="card__box--cont">
                   <div class="card__box--image">
-                    <img src="/assets/img/payment_com/payment_contact1.png" />
+                    <img src="/assets/img/payment_com/payment_contact2.png"/>
                   </div>
                   <div class="card__box--txt">
-                    支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
+                    セゾンインボイスのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-                <div><a class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
+                <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
-            </div>
-            <div href="#" class="card">
-              <summary class="card__box">
-                <div class="card__box--ttl">利用イメージを知りたい方はこちら</div>
-                <div class="card__box--cont">
+          </div>
+          <div href="#" class="card">
+            <summary class="card__box">
+              <div class="card__box--ttl">営業担当に相談・お問い合わせをしたい方はこちら</div>
+              <div class="card__box--cont">
                   <div class="card__box--image">
-                    <img src="/assets/img/payment_com/payment_contact2.png" />
+                    <img src="/assets/img/common/contact_inner2.png"/>
                   </div>
                   <div class="card__box--txt">
-                    支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
+                    導入にあたってのご相談や、貴社の運用フローに合わせた導入方法をご提案させていただきます。
                   </div>
                 </div>
-                <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
-              </summary>
-            </div>
+              <div><a class="blue_gradient_btn" href="/contact/">導入のご相談・お問い合わせ（無料）</a></div>
+            </summary>
           </div>
         </div>
       </div>
+    </div>
   </section>
 </main>
 {% endblock %}
