--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -99,6 +99,7 @@
       align-items: center;
       justify-content: center;
       margin: auto;
+      padding-left: 130px;
 
       @media #{$sp} {
         max-width: 1200px;
@@ -129,7 +130,7 @@
           padding: 6px 20px;
 
           color: $white-color;
-          background-color: $blue-color-3;
+          background-color: $blue-color-4;
           transform: skew(-10deg);
           margin-bottom: 15px;
           .title-content {
@@ -156,9 +157,11 @@
         }
         .ttl-tertiary {
           font-size: 24px;
+          font-weight: 400;
           color: $white-color;
           margin-bottom: 105px;
           text-align: left;
+          line-height: 34px;
 
           @media #{$sp} {
             font-size: 20px;
@@ -259,6 +262,9 @@
         @media #{$sp} {
           width: 100%;
         }
+      }
+      @media #{$sp} {
+        padding-left: 0;
       }
     }
 
@@ -526,15 +532,18 @@
             }
 
             &::before {
+              bottom: -14px;
+              left: calc(50% - 2px);
               position: absolute;
-              content: "\A";
-              top: calc(100% - 1px);
-              left: calc(50% - 15px);
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-top: 10px solid #fff;
+              content: "";
+              width: 15px;
+              height: 15px;
+              background: $blue-color-4;
+              border: 1px solid #fff;
+              border-top: none;
+              border-left: none;
+              transform: rotate(45deg) translateX(-50%);
+              z-index: 1;
             }
           }
           @media #{$sp} {
@@ -792,7 +801,7 @@
             box-shadow: 0px 3px 20px #00000029;
             background-color: $white-color;
             transition: all .3s;
-            a {
+            .card {
               display: flex;
               gap: 32px;
               padding: 30px;
@@ -980,15 +989,18 @@
             }
 
             &::before {
+              bottom: -14px;
+              left: calc(50% - 2px);
               position: absolute;
-              content: "\A";
-              top: calc(100% - 1px);
-              left: calc(50% - 15px);
-              width: 0;
-              height: 0;
-              border-left: 15px solid transparent;
-              border-right: 15px solid transparent;
-              border-top: 10px solid $primary-color;
+              content: "";
+              width: 15px;
+              height: 15px;
+              background: $white-color;
+              border: 1px solid $primary-color;
+              border-top: none;
+              border-left: none;
+              transform: rotate(45deg) translateX(-50%);
+              z-index: 1;
             }
           }
         }
@@ -1149,6 +1161,11 @@
 
     .card-type22 .useful-wp .containers .card .card__box {
       padding: 38px 44px;
+
+      .blue_gradient_btn {
+        padding: 12px 20px;
+      }
+
       @media #{$sp} {
         padding: 30px 15px;
       }
