--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -133,7 +133,7 @@
     <div class="containers">
       <h4 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h4>
       <div class="grid-card-containers">
-        <a class="card" href="#cospro-feature">
+        <a class="card" href="#worry1">
           <div class="card-head">お悩み①</div>
           <h2 class="ttl-head">出張手配は社員任せ。<br> 金額の妥当性が判断できない</h2>
           <img src="/assets/img/cospro/card4.png" alt="work image" class="card-img">
@@ -144,7 +144,7 @@
           <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
 
-        <a class="card" href="#membership">
+        <a class="card" href="#worry2">
           <div class="card-head">お悩み②</div>
           <h2 class="ttl-head">出張手配に時間がかかり <br>「見えないコスト」が上昇</h2>
           <img src="/assets/img/cospro/card5.png" alt="work image" class="card-img">
@@ -155,7 +155,7 @@
           <span class="more-btn">{% include 'component/icons/circle-arrow.njk' %}</span>
         </a>
 
-        <a class="card"  href="#flow-usage">
+        <a class="card"  href="#worry3">
           <div class="card-head">お悩み３</div>
           <h2 class="ttl-head">出張手配のルールがない。<br> ガバナンスが不安・・・</h2>
           <img src="/assets/img/cospro/card6.png" alt="work image" class="card-img">
@@ -188,12 +188,12 @@
     </div>
   </section>
 
-  <section id="cospro-feature" class="section-senary">
+  <section class="section-senary">
     <div class="containers">
       <h4 class="ttl-tertiary">CosProの特長</h4>
       <h2 class="ttl-primary">出張手配の問題、すべて解決いたします!</h2>
 
-      <div class="step-container">
+      <div id="worry1" class="step-container">
         <div class="step-title">
           <div class="badge">お悩み①</div>
           <div class="title">出張手配は社員任せ。金額の妥当性が判断できない</div>
@@ -210,7 +210,7 @@
         </ul>
       </div>
 
-      <div class="step-container">
+      <div id="worry2" class="step-container">
         <div class="step-title">
           <div class="badge">お悩み②</div>
           <div class="title">出張手配に時間がかかり、「見えないコスト」が上昇</div>
@@ -255,7 +255,7 @@
         </div>
       </div>
 
-      <div class="step-container">
+      <div id="worry3" class="step-container">
         <div class="step-title">
           <div class="badge">お悩み③</div>
           <div class="title">出張手配のルールがない。ガバナンスが不安・・・</div>
@@ -288,7 +288,7 @@
     </div>
   </section>
 
-  <section id="membership" class="section-septenary">
+  <section class="section-septenary">
     <div class="containers">
       <h4 class="ttl-tertiary">法人カード会員特典</h4>
       <h2 class="ttl-primary">クレディセゾンの法人向けカード会員様限定の特典をご用意しています。</h2>
@@ -320,7 +320,7 @@
     </div>
   </section>
 
-  <section id="flow-usage" class="section-quinary">
+  <section class="section-quinary">
     <div class="containers">
       <h5 class="ttl-tertiary">ご利用までの流れ</h5>
       <h1 class="ttl-primary">ご利用開始まで営業担当がフォローいたします。</h1>
