--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -274,7 +274,7 @@
                 </div>
               </div>
 
-              <a href="https://loan.saisoncard.co.jp/" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
+              <a href="https://loan.saisoncard.co.jp/" target="_blank" class="bondi_blue_outline_btn">MONEY CARDをもっと詳しく</a>
             </div>
           </div>
         </div>
