--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -869,7 +869,8 @@
       background: #fff;
 
       @media #{$sp} {
-        grid-template-columns: 38% 38% 26%;
+        grid-template-columns: auto;
+        gap: 20px;
       }
 
       .flow-item {
@@ -878,6 +879,11 @@
         padding-right: 24px;
         padding-left: 0;
         filter: drop-shadow(10px 0px 4px #00000029);
+
+        @media #{$sp} {
+          padding-right: 0;
+          filter: drop-shadow(0 10px 4px #00000029);
+        }
 
         &:last-child {
           padding: 0;
@@ -904,9 +910,8 @@
           );
 
           @media #{$sp} {
-            padding: 10px 23px 10px 10px;
-            margin-left: -5px;
-            clip-path: polygon(0 0, 90px 0, 100% 50%, 90px 100%, 0 100%, 0 0);
+            padding: 15px 15px 55px 15px;
+            clip-path: polygon(50% 100%, 0% 85%, 0% 0%, 100% 0%, 100% 85%);
           }
 
           img {
@@ -922,7 +927,7 @@
           flex-grow: 1;
 
           @media #{$sp} {
-            font-size: 12px;
+            font-size: 16px;
           }
         }
 
@@ -940,7 +945,7 @@
             padding: 30px 35px 30px 30px;
 
             @media #{$sp} {
-              padding: 5px 10px 5px 5px;
+              padding: 15px;
             }
           }
         }
