--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -68,9 +68,9 @@ link: "#top"
               {% include 'component/icons/circle-question.njk' %}
             </h3>
           </div>
-          <div class="ttl-primary">
+          <h1 class="ttl-primary">
             セゾンプラチナ・ビジネス・<br> アメリカン・エキスプレス®・カード
-          </div>
+          </h1>
 
           <div class="card-contents">
             <div class="card-img">
