--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -76,9 +76,9 @@ link: "#material"
       <div class="section-welcome-info">
         <div class="section-welcome-info-left">
           <div class="title-notice">
-            <div class="title-content">
+            <h3 class="title-content">
               中小企業様の経営を支援する福利厚生サービス
-            </div>
+            </h3>
           </div>
           <h1 class="ttl-primary">セゾンフクリコ</h1>
           <h3 class="ttl-tertiary">従業員が喜ぶ優待メニューが充実！<br />月額385円（税込）～で始められる福利厚生サービス</h3>
