fix contact section

--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -605,7 +605,7 @@ link: "#material"
                     <img src="/assets/img/payment_com/payment_contact2.png"/>
                   </div>
                   <div class="card__box--txt">
-                    セゾンインボイスのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
+                    導入にあたってのご相談や、各種優待サービスなどをご紹介させていただきます。
                   </div>
                 </div>
                 <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
