--- a/app/assets/scss/4-pages/_business_efficiency.scss
+++ b/app/assets/scss/4-pages/_business_efficiency.scss
@@ -74,6 +74,7 @@
       font-size: 18px;
       font-weight: 400;
       margin-bottom: 0;
+      text-shadow: 0px 0px 20px #05172c8d;
 
       @media #{$sp} {
         font-size: 12px;
@@ -142,9 +143,7 @@
           }
 
           .card-body {
-            justify-content: flex-start;
             align-items: center;
-            flex-wrap: nowrap;
 
             .circle-container {
               width: 140px;
@@ -158,19 +157,23 @@
 
             .check-list {
               list-style: none;
+              width: calc(100% - 170px);
 
-              &__item {
-                display: inline-flex;
+              @media #{$sp} {
+                width: 100%;
               }
 
-              li:before {
-                content: "";
-                display: inline-block;
-                width: 20px;
-                height: 13px;
-                margin-right: 0;
-                background: url("/assets/img/common/tick-checked.svg") no-repeat;
-                vertical-align: middle;
+              &-item {
+                display: flex;
+                gap: 10px;
+                align-items: center;
+
+                svg {
+                  width: 20px;
+                }
+              }
+              &__item {
+                display: inline-flex;
               }
             }
           }
@@ -325,6 +328,13 @@
           }
         }
       }
+    }
+
+    .note {
+      .number-circle {
+        visibility: hidden;
+      }
+      text-align: left;
     }
   }
 
