--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -98,12 +98,11 @@
     }
 
     &-info {
-      max-width: 1300px;
+      max-width: 1200px;
       display: flex;
       align-items: center;
       justify-content: center;
       margin: auto;
-      padding-left: 130px;
 
       @media #{$sp} {
         max-width: 1200px;
@@ -119,7 +118,7 @@
       }
 
       &-left {
-        width: 45%;
+        width: 60%;
         text-align: left;
         @media #{$sp} {
           width: 100%;
@@ -244,7 +243,8 @@
 
       &-right {
         position: relative;
-        width: 55%;
+        width: 772px;
+        height: 405px;
         img {
           width: 100%;
           height: 100%;
